--- a/index.html
+++ b/index.html
@@ -2,3 +2,6 @@
 <p>This is the webpage.</p>
 <p><img src="https://t4.ftcdn.net/jpg/06/12/22/27/240_F_612222711_H1PrYUOd9DgFiFTvmHXFM5TiZOmMjEqf.jpg" alt="hatten är röd" />
 </p>
+
+<p>Welcome to my simple webpage!</p>
+<p>Feel free to explore and enjoy the image above.</p>
